--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -25,7 +25,7 @@
   @include mainPage("../images/hero-alt.webp", 0.6);
 }
 .header-articles {
-  @include mainPage("../images/articles/hero.jpg", 0.6);
+  @include mainPage("../images/articles/hero.webp", 0.6);
 }
 
 .section-story {
